<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7887AB">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createUsername"
            android:layout_margin="15dp"
            android:hint="@string/createUsername"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createPassword"
            android:layout_margin="15dp"
            android:hint="@string/createPassword"
            android:password="false"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createAccount"
            android:layout_margin="15dp"
            android:background="#162955"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/createAccount" />
    </LinearLayout>
</LinearLayout>